tests/invalid/For_Invalid_7.whiley
method f(int[] xs):
    int r = 0
    //
    for i in 0..5:
        r = r + xs[i]
